tests/ui/asm/naked-with-invalid-repr-attr.stderr
error: `#[repr]` attribute cannot be used on functions
  --> $DIR/naked-with-invalid-repr-attr.rs:10:1
   |
LL | #[repr(C)]
   | ^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types

error: `#[repr]` attribute cannot be used on functions
  --> $DIR/naked-with-invalid-repr-attr.rs:17:1
   |
LL | #[repr(transparent)]
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types

error: `#[repr]` attribute cannot be used on functions
  --> $DIR/naked-with-invalid-repr-attr.rs:24:1
   |
LL | #[repr(C)]
   | ^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types

error: `#[repr]` attribute cannot be used on functions
  --> $DIR/naked-with-invalid-repr-attr.rs:33:1
   |
LL | #[repr(C, packed)]
   | ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types

error: `#[repr]` attribute cannot be used on functions
  --> $DIR/naked-with-invalid-repr-attr.rs:33:1
   |
LL | #[repr(C, packed)]
   | ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `#[repr]` attribute cannot be used on functions
  --> $DIR/naked-with-invalid-repr-attr.rs:42:1
   |
LL | #[repr(u8)]
   | ^^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to enums

error: aborting due to 6 previous errors

